force-app/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <label>Account Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ultimate Beneficary</fullName>
            </value>
            <value>
                <fullName>Donor - Time</fullName>
            </value>
            <value>
                <fullName>Donor - Money</fullName>
            </value>
            <value>
                <fullName>Donor - Inkind</fullName>
            </value>
            <value>
                <fullName>Beneficiary - Inkind</fullName>
            </value>
            <value>
                <fullName>Recipient- In Kind (Bread)</fullName>
            </value>
            <value>
                <fullName>Recipient- In Kind (Others)</fullName>
            </value>
            <value>
                <fullName>Recipient- Money</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>