force-app/main/default/objects/Account/fields/Account_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Category__c</fullName>
    <label>Account Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Children Day Care Centre</fullName>
            </value>
            <value>
                <fullName>Children Home</fullName>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Centre</fullName>
            </value>
            <value>
                <fullName>Needy Shelter</fullName>
            </value>
            <value>
                <fullName>Family Service Centre</fullName>
            </value>
            <value>
                <fullName>Senior Activity Centre</fullName>
            </value>
            <value>
                <fullName>Residents Committee</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>