force-app/main/default/objects/Account/fields/Account_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Account_Subcategory__c</fullName>
    <description>This is the sub category for person accounts</description>
    <inlineHelpText>Use this for Volunteers, Individual Recipients and Individual Donors</inlineHelpText>
    <label>Person Account Sub Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beneficiaries</fullName>
            </value>
            <value>
                <fullName>Ultimate Beneficiary</fullName>
            </value>
            <value>
                <fullName>Individual Donor</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>Government Institutions</fullName>
            </value>
            <value>
                <fullName>Corporate Donor</fullName>
            </value>
            <value>
                <fullName>-None-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>