force-app/main/default/objects/Account/fields/Available_for_Bread_donation__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Bread_donation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Bread donation</label>
    <type>Checkbox</type>
</CustomField>