force-app/main/default/objects/Account/fields/Bakery_ID__c.field-meta.xml
<CustomField>
    <fullName>Bakery_ID__c</fullName>
    <label>Bakery ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>