force-app/main/default/objects/Account/fields/Birth_Year_Not_Provided__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year_Not_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please Check if Birth Year is not provided</inlineHelpText>
    <label>Birth Year Not Provided</label>
    <type>Checkbox</type>
</CustomField>