force-app/main/default/objects/Account/fields/Birthdate_pc__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_pc__c</fullName>
    <description>Test Carol</description>
    <inlineHelpText>Test by Carol to rectify issue with double birthdate in System.</inlineHelpText>
    <label>Birthdate__pc [DO NOT USE]</label>
    <type>Date</type>
</CustomField>