force-app/main/default/objects/Account/fields/Block_No__c.field-meta.xml
<CustomField>
    <fullName>Block_No__c</fullName>
    <description>Block or House Number</description>
    <label>Block / House No.</label>
    <length>5</length>
    <type>Text</type>
</CustomField>