force-app/main/default/objects/Account/fields/Data_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Data_Mapping__c</fullName>
    <externalId>true</externalId>
    <label>Data Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>