force-app/main/default/objects/Account/fields/Delivery_Tim__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Tim__c</fullName>
    <label>Delivery Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
            <value>
                <fullName>12:15 AM</fullName>
            </value>
            <value>
                <fullName>12:30 AM</fullName>
            </value>
            <value>
                <fullName>12:45 AM</fullName>
            </value>
            <value>
                <fullName>01:00 AM</fullName>
            </value>
            <value>
                <fullName>01:15 AM</fullName>
            </value>
            <value>
                <fullName>01:30 AM</fullName>
            </value>
            <value>
                <fullName>01:45 AM</fullName>
            </value>
            <value>
                <fullName>02:00 AM</fullName>
            </value>
            <value>
                <fullName>02:15 AM</fullName>
            </value>
            <value>
                <fullName>02:30 AM</fullName>
            </value>
            <value>
                <fullName>02:45 AM</fullName>
            </value>
            <value>
                <fullName>03:00 AM</fullName>
            </value>
            <value>
                <fullName>03:15 AM</fullName>
            </value>
            <value>
                <fullName>03:30 AM</fullName>
            </value>
            <value>
                <fullName>03:45 AM</fullName>
            </value>
            <value>
                <fullName>04:00 AM</fullName>
            </value>
            <value>
                <fullName>04:15 AM</fullName>
            </value>
            <value>
                <fullName>04:30 AM</fullName>
            </value>
            <value>
                <fullName>04:45 AM</fullName>
            </value>
            <value>
                <fullName>05:00 AM</fullName>
            </value>
            <value>
                <fullName>05:15 AM</fullName>
            </value>
            <value>
                <fullName>05:30 AM</fullName>
            </value>
            <value>
                <fullName>05:45 AM</fullName>
            </value>
            <value>
                <fullName>06:00 AM</fullName>
            </value>
            <value>
                <fullName>06:15 AM</fullName>
            </value>
            <value>
                <fullName>06:30 AM</fullName>
            </value>
            <value>
                <fullName>06:45 AM</fullName>
            </value>
            <value>
                <fullName>07:00 AM</fullName>
            </value>
            <value>
                <fullName>07:15 AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>