force-app/main/default/objects/Account/fields/Dietary_Requirment__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirment__c</fullName>
    <label>Dietary Requirment</label>
    <type>TextArea</type>
</CustomField>