force-app/main/default/objects/Account/fields/Do_not_disclose__c.field-meta.xml
<CustomField>
    <fullName>Do_not_disclose__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for &apos;Do not disclose donor identity&quot;</description>
    <inlineHelpText>Check if Donor does not want to disclose Identity</inlineHelpText>
    <label>Do not disclose</label>
    <type>Checkbox</type>
</CustomField>