force-app/main/default/objects/Account/fields/Donor_Org_Email__c.field-meta.xml
<CustomField>
    <fullName>Donor_Org_Email__c</fullName>
    <description>email address used for Volunteer Portal login</description>
    <inlineHelpText>email address used for Volunteer Portal login - DO NOT CHANGE</inlineHelpText>
    <label>Donor Org Email</label>
    <type>Email</type>
</CustomField>