force-app/main/default/objects/Account/fields/Donor_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_Org_ID__c</fullName>
    <label>Donor Org ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>