force-app/main/default/objects/Account/fields/Donor_Tier__c.field-meta.xml
<CustomField>
    <fullName>Donor_Tier__c</fullName>
    <inlineHelpText>1 : $50k and above
2 : $30k to less than $50k
3 : $10k to less than $30k
4 : Less than $10k
For current FY</inlineHelpText>
    <label>Donor Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>