force-app/main/default/objects/Account/fields/Frequency_of_Donation__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Donation__c</fullName>
    <inlineHelpText>Consistent: Every quarter since donation for 4 consecutive quarters
Inconsistent: Otherwise</inlineHelpText>
    <label>Frequency of Donation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consistent</fullName>
            </value>
            <value>
                <fullName>Inconsistent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>