force-app/main/default/objects/Account/fields/Home_Category__c.field-meta.xml
<CustomField>
    <fullName>Home_Category__c</fullName>
    <label>Home Category</label>
    <type>TextArea</type>
</CustomField>