force-app/main/default/objects/Account/fields/How_is_the_Institute_funded__c.field-meta.xml
<CustomField>
    <fullName>How_is_the_Institute_funded__c</fullName>
    <label>How is the Institute funded</label>
    <type>TextArea</type>
</CustomField>