force-app/main/default/objects/Account/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>Internal ID used by FFTH</description>
    <inlineHelpText>This is the FFTH id for this type of Account (e.g. Vendor id, Volunteer id)</inlineHelpText>
    <label>Old ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>