force-app/main/default/objects/Account/fields/ID_No__c.field-meta.xml
<CustomField>
    <fullName>ID_No__c</fullName>
    <externalId>true</externalId>
    <label>ID No.</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>