force-app/main/default/objects/Account/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASGD</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>ITR</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NRIC</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>UEN</fullName>
            </value>
            <value>
                <fullName>UEN-Business</fullName>
            </value>
            <value>
                <fullName>UEN-Local Company</fullName>
            </value>
            <value>
                <fullName>UEN-Others</fullName>
            </value>
            <value>
                <fullName>UEN- Business</fullName>
                <isActive>false</isActive>
                <label>UEN- Business</label>
            </value>
            <value>
                <fullName>UEN- Local Company</fullName>
                <isActive>false</isActive>
                <label>UEN- Local Company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>