force-app/main/default/objects/Account/fields/Identification_no__c.field-meta.xml
<CustomField>
    <fullName>Identification_no__c</fullName>
    <label>Identification No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>