force-app/main/default/objects/Account/fields/Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Identification_Type__c</fullName>
    <label>Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fin No</fullName>
            </value>
            <value>
                <fullName>NRIC No</fullName>
            </value>
            <value>
                <fullName>Passport No</fullName>
            </value>
            <value>
                <fullName>UEN-LOCAL COMPANY</fullName>
            </value>
            <value>
                <fullName>UEN-OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>