force-app/main/default/objects/Account/fields/Import__c.field-meta.xml
<CustomField>
    <fullName>Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import</label>
    <type>Checkbox</type>
</CustomField>