force-app/main/default/objects/Account/fields/Is_closed_on_Public_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Is_closed_on_Public_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is closed on Public Holidays</label>
    <type>Checkbox</type>
</CustomField>