force-app/main/default/objects/Account/fields/Is_Not_available_on_Public_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_available_on_Public_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not available on Public Holiday</label>
    <type>Checkbox</type>
</CustomField>