force-app/main/default/objects/Account/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <description>Locality in the respective areas in Singapore</description>
    <label>Locality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Marina</fullName>
            </value>
            <value>
                <fullName>Shenton Way</fullName>
            </value>
            <value>
                <fullName>Harborfront</fullName>
            </value>
            <value>
                <fullName>Clementi</fullName>
            </value>
            <value>
                <fullName>Bukit Merah</fullName>
            </value>
            <value>
                <fullName>City Hall</fullName>
            </value>
            <value>
                <fullName>Bugis</fullName>
            </value>
            <value>
                <fullName>Jalan Besar</fullName>
            </value>
            <value>
                <fullName>Orchard</fullName>
            </value>
            <value>
                <fullName>Holland</fullName>
            </value>
            <value>
                <fullName>Novena</fullName>
            </value>
            <value>
                <fullName>Toa Payoh</fullName>
            </value>
            <value>
                <fullName>Kallang</fullName>
            </value>
            <value>
                <fullName>Geylang</fullName>
            </value>
            <value>
                <fullName>East Coast</fullName>
            </value>
            <value>
                <fullName>Bedok</fullName>
            </value>
            <value>
                <fullName>Changi</fullName>
            </value>
            <value>
                <fullName>Tampines - Pasir Ris</fullName>
            </value>
            <value>
                <fullName>Sengkang - Serangoon</fullName>
            </value>
            <value>
                <fullName>Ang Mo Kio - Upper Thomson</fullName>
            </value>
            <value>
                <fullName>Upper Bukit Timah - Ulu Pandan</fullName>
            </value>
            <value>
                <fullName>Jurong</fullName>
            </value>
            <value>
                <fullName>Bukit Panjang - Bukit Batok</fullName>
            </value>
            <value>
                <fullName>Choa Chu Kang</fullName>
            </value>
            <value>
                <fullName>Woodlands</fullName>
            </value>
            <value>
                <fullName>Yishun</fullName>
            </value>
            <value>
                <fullName>Sembawang</fullName>
            </value>
            <value>
                <fullName>Seletar - Yio Chu Kang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>