force-app/main/default/objects/Account/fields/No_of_Resident_Beneficaries__c.field-meta.xml
<CustomField>
    <fullName>No_of_Resident_Beneficaries__c</fullName>
    <label>No of Resident/Beneficaries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>