force-app/main/default/objects/Account/fields/Other_Organization_Volunteered__c.field-meta.xml
<CustomField>
    <fullName>Other_Organization_Volunteered__c</fullName>
    <label>Other Organization Volunteered</label>
    <length>100</length>
    <type>Text</type>
</CustomField>