force-app/main/default/objects/Account/fields/Pick_Up_Tim__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Tim__c</fullName>
    <label>Pick Up Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12:00 AM</fullName>
            </value>
            <value>
                <fullName>12:05 AM</fullName>
            </value>
            <value>
                <fullName>12:10 AM</fullName>
            </value>
            <value>
                <fullName>12:15 AM</fullName>
            </value>
            <value>
                <fullName>12:20 AM</fullName>
            </value>
            <value>
                <fullName>12:25 AM</fullName>
            </value>
            <value>
                <fullName>12:30 AM</fullName>
            </value>
            <value>
                <fullName>12:35 AM</fullName>
            </value>
            <value>
                <fullName>12:40 AM</fullName>
            </value>
            <value>
                <fullName>12:45 AM</fullName>
            </value>
            <value>
                <fullName>12:50 AM</fullName>
            </value>
            <value>
                <fullName>12:55 AM</fullName>
            </value>
            <value>
                <fullName>01:00 AM</fullName>
            </value>
            <value>
                <fullName>01:05 AM</fullName>
            </value>
            <value>
                <fullName>01:10 AM</fullName>
            </value>
            <value>
                <fullName>01:15 AM</fullName>
            </value>
            <value>
                <fullName>01:20 AM</fullName>
            </value>
            <value>
                <fullName>01:25 AM</fullName>
            </value>
            <value>
                <fullName>01:30 AM</fullName>
            </value>
            <value>
                <fullName>01:35 AM</fullName>
            </value>
            <value>
                <fullName>01:40 AM</fullName>
            </value>
            <value>
                <fullName>01:45 AM</fullName>
            </value>
            <value>
                <fullName>01:50 AM</fullName>
            </value>
            <value>
                <fullName>01:55 AM</fullName>
            </value>
            <value>
                <fullName>02:00 AM</fullName>
            </value>
            <value>
                <fullName>02:05 AM</fullName>
            </value>
            <value>
                <fullName>02:10 AM</fullName>
            </value>
            <value>
                <fullName>02:15 AM</fullName>
            </value>
            <value>
                <fullName>02:20 AM</fullName>
            </value>
            <value>
                <fullName>02:25 AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>